<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cdBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/banner_ads"
                    android:textSize="22sp" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ellipse_card_corner" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cdRectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"



            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/rectangle_ad"

                    android:textSize="22sp" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ellipse_card_corner_dark" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cdInterstitial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"



            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/interstitial_ad"

                    android:textSize="22sp" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ellipse_card_corner" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cdReward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/reward_ad"
                    android:textSize="22sp" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ellipse_card_corner_dark" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cdNative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/native_ad"
                    android:textSize="22sp" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ellipse_card_corner" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>